--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,11 @@
 /* reset */
 * {
-	margin: 0; padding: 0; box-sizing: border-box;
+	margin: 100; padding: 0; box-sizing: border-box;
 }
 
 html, body { height: 100%; }
 
-body { font: 16px Helvetica, Arial; }
+body { font: 20px Helvetica, Arial; }
 
 main { 
 	display: flex;
@@ -16,15 +16,16 @@ main {
 .form-container { 
 	flex: 1; 
 	border: 6px solid #bfcfd6;
-	background-color: #e3edf1;
+	background-color: #dddee3;
 
 	label { display: block; margin-bottom: 0.5rem; }
 }
 
 .messages { 
 	flex: 2;
-	background-color: #eee;
-	border: 6px solid #e2e0e0; 
+	//background-color: #eee;
+	background-image: url(../images/cbackground.jpeg);
+	border: 6px solid #bfcfd6; 
 }
 
 input, textarea { 
@@ -50,7 +51,7 @@ form {
 	input[type=submit] { 
 		width: auto; 
 		padding: 10px; 
-		background-color: rgb(75, 200, 17);
+		background: #7badd0;
 		margin-top: 1rem; 
 		border-radius: 8px;
 		color: white;
