--- a/sass/modules/_message.scss
+++ b/sass/modules/_message.scss
@@ -3,7 +3,9 @@
 
     width: 45%;
     padding: 8px 12px;
-    background-color: white; 
+    background: #7badd0;
+    //background-color: white;
+  
     border-radius: 8px;
     margin-bottom: 1rem;
 
@@ -13,6 +15,6 @@
 
 .my-message {
     float: right !important;
-    background-color: #86bf9d;
+    background-color: #7badd0;
     color: white;
 }
