--- a/views/index.html
+++ b/views/index.html
@@ -11,13 +11,14 @@
 <body>
 	<main id="app">
 		<section class="form-container">
-			<label for="nickname">Your Nickname (optional)</label>
-			<input type="text" id="nickname" class="nickname" placeholder="What is your nickname?">
+			
 
-			<form>
-				<label for="message">Something to say?</label>
-				<textarea v-model="message" class="message" type="text" autocomplete="off" id="textarea"></textarea>
-				<input @click.prevent="dispatchMessage" type="submit">
+			<form class="form"> 
+				<label for="nickname">Your Nickname (Optional)</label>
+				<input v-model="nickName" type="text" id="nickname" class="nickname" placeholder="Name">
+				<label for="nickname">Your Message</label>
+				<textarea v-model="message" class="message" type="text" autocomplete="off" id="textarea" placeholder="Type your message here..."></textarea>
+				<input @click.prevent="dispatchMessage" type="submit"> <!-- .prevent prevents default behaviour -->
 			</form>
 		</section>
 
